# Multi-Modal-Personal-Knowledge-Retriever

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
src/core/config/: config.py
src/core/models/: chunk.py  citation.py  document.py  indexState.py  section.py  service_result.py
src/core/utils/: __init__.py  utils.py
src/infrastructure/database/: child_chunks_db.py  parent_store_manager.py
src/infrastructure/docker/: docker-compose.yml
src/infrastructure/filesystem/: obsidian_parser.py  vault_scanner.py
src/infrastructure/tools/: tools.py
src/services/: chunking.py  embedding.py  indexing.py  obsidian_preprocessor.py  retrieval.py
tests/: test_obsidian_parser.py
