[project]
name = "multi-modal-personal-knowledge-retriever"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.10",
    "langchain-core>=1.2.16",
    "langchain-openai>=1.1.10",
    "langchain-text-splitters>=1.1.1",
    "loguru>=0.7.3",
    "openai>=2.24.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pyyaml>=6.0.3",
    "qdrant-client>=1.17.0",
    "tiktoken>=0.9.0",
]
